@@ -1,7 +1,7 @@
 VSVersionInfo(
   ffi=FixedFileInfo(
-    filevers=(2, 1, 0, 0),
-    prodvers=(2, 1, 0, 0),
+    filevers=(2, 2, 0, 0),
+    prodvers=(2, 2, 0, 0),
     mask=0x3f,
     flags=0x0,
     OS=0x40004,
@@ -16,12 +16,12 @@ VSVersionInfo(
         u'040904B0',
         [StringStruct(u'CompanyName', u'Daniel García Vázquez'),
         StringStruct(u'FileDescription', u'Manager de mods de Minecraft'),
-        StringStruct(u'FileVersion', u'2.1.0'),
+        StringStruct(u'FileVersion', u'2.2.0'),
         StringStruct(u'InternalName', u'ModManager'),
         StringStruct(u'LegalCopyright', u'\xa9 Daniel García. 2020 Todos los derechos reservados.'),
         StringStruct(u'OriginalFilename', u'ModManager.Exe'),
         StringStruct(u'ProductName', u'ModManager para Minecraft'),
-        StringStruct(u'ProductVersion', u'2.1.0')])
+        StringStruct(u'ProductVersion', u'2.2.0')])
       ]), 
     VarFileInfo([VarStruct(u'Translation', [1034, 1200])])
   ]
